--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   	<script src="js/jquery-2.1.3.min.js"></script>
   
