some link added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Santa Eats</title>
+    <title>Food Bahok</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -61,7 +61,7 @@
    <header id="header" class="row">   
 
    		<div class="header-logo">
-	        <a href="index.html">Santa Eats</a>
+	        <a href="index.html">Food Bahok</a>
 	    </div>
 
 	   	<nav id="header-nav-wrap">
@@ -108,7 +108,7 @@
                             <span class="icon-circle-down" aria-hidden="true"></span>
                             Download App
                         </a>
-                        <a href="https://www.youtube.com/watch?v=ND53EYiJCS4" data-lity class="button stroke">
+                        <a href="https://www.youtube.com/channel/UCzIqh0Xen-gIPPr5lb2I7pw/videos" data-lity class="button stroke">
                             <span class="icon-play" aria-hidden="true"></span>
                             Watch Video
                         </a>
@@ -385,8 +385,8 @@
                 </p>
 
                 <ul class="download-badges">
-                    <li><a href="https://apps.apple.com/gb/app/santa-eats/id1546059751" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
-                    <li><a href="https://play.google.com/store/apps/details?id=com.santaeats.customer" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                    <li><a href="#" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
+                    <li><a href="#" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
                 </ul>
 
             </div>
@@ -528,9 +528,9 @@
     <script>
           var parser = new UAParser();
 	
-            var androidDownloadLik = "https://play.google.com/store/apps/details?id=com.santaeats.customer"
-            var iosDownloadLink ="https://apps.apple.com/gb/app/santa-eats/id1546059751"
-            var orderLink = "https://www.santaeats.co.uk/en/"
+            var androidDownloadLik = "#"
+            var iosDownloadLink ="#"
+            var orderLink = "https://foodbahok.com/"
 
             if(parser.getOS().name === "Android"){
                     document.querySelector("#btnDownload").setAttribute('href',androidDownloadLik)
