commit for clear

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- header 
    ================================================== -->
-   <header id="header" class="row">   
+   <header id="header">   
 
    		<div class="header-logo">
 	        <a href="index.html">Food Bahok</a>
