commit to clear

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
    <header id="header">   
 
    		<div class="header-logo">
-	        <a href="index.html">Food Bahok</a>
+	        <!-- <a href="index.html">Food Bahok</a> -->
+
+            <img src="images/logo.png" alt="">
 	    </div>
 
 	   	<nav id="header-nav-wrap">
