--- a/index.html
+++ b/index.html
@@ -406,7 +406,16 @@
 
                 <div class="col-three md-1-3 tab-full footer-info">            
 
-                    <div class="footer-logo"></div>
+                    <!-- <div class="footer-logo"></div> -->
+
+                    <div class="footerLogo" style="
+                    width: 130px;
+                    padding: 7px 0px;
+                ">
+                    
+            
+                        <img src="images/logo.png" alt="">
+                    </div>
 
                     <p>
                    Food Bahok developed this unique technology to deliver, the world’s best, most modular, lowest cost app based interactive online food ordering solution on the market. <br> We are focused on delivering. 
