--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h3 data-aos="fade-up">Download <br>Food Bahok app</h3>
 
                     <h1 data-aos="fade-up" style="margin-bottom: 0px;">
-                        50% OFF all orders in February 2022
+                        Get 200tk Food Voucher
                     </h1>
                   	<h1 data-aos="fade-up" style="margin-bottom: 0px;">
                     </h1>
@@ -131,16 +131,16 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="https://www.facebook.com/santaeatsUK/"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/foodbahok1/"><i class="fa fa-facebook-square"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/SantaEats"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/food_bahok"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/santaeatsuk"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/food_bahok/"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/channel/UCHUtgyPwvQ8OLWKQqh6QR7g"><i class="fa fa-youtube-play"></i></a>
+                <a href="https://www.youtube.com/channel/UCzIqh0Xen-gIPPr5lb2I7pw"><i class="fa fa-youtube-play"></i></a>
             </li>
         </ul>
         <!-- end home-social-list -->
