final commit for today

--- a/index.html
+++ b/index.html
@@ -131,16 +131,16 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="https://www.facebook.com/foodbahok1/"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.facebook.com/foodbahok1/"  target="_blank"><i class="fa fa-facebook-square"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/food_bahok"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/food_bahok" target="_blank"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/food_bahok/"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.instagram.com/food_bahok/" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-                <a href="https://www.youtube.com/channel/UCzIqh0Xen-gIPPr5lb2I7pw"><i class="fa fa-youtube-play"></i></a>
+                <a href="https://www.youtube.com/channel/UCzIqh0Xen-gIPPr5lb2I7pw" target="_blank"><i class="fa fa-youtube-play"></i></a>
             </li>
         </ul>
         <!-- end home-social-list -->
